@@ -393,6 +393,12 @@ return [
     // (e.g. PHP is compiled with --enable-debug or when using XDebug)
     'skip_slow_php_options_warning' => false,
 
+    // Set this to false to emit PhanUndeclaredFunction issues for internal functions that Phan has signatures for,
+    // but aren't available in the codebase, or the internal functions used to run phan (may lead to false positives if an extension isn't loaded)
+    // If this is true(default), then Phan will not warn.
+    // (Overridden to false for phan self-analysis)
+    'ignore_undeclared_functions_with_known_signatures' => false,
+
     // A list of plugin files to execute
     'plugins' => [
         '.phan/plugins/AlwaysReturnPlugin.php',
