@@ -44,6 +44,12 @@ return [
     // a call to parent::__construct() is required.
     'parent_constructor_required' => ['Child283'],
 
+    // Set this to false to emit PhanUndeclaredFunction issues for internal functions that Phan has signatures for,
+    // but aren't available in the codebase, or the internal functions used to run phan (may lead to false positives if an extension isn't loaded)
+    // If this is true(default), then Phan will not warn.
+    // This is set to true for a unit test.
+    'ignore_undeclared_functions_with_known_signatures' => true,
+
     // If true, Phan will read `class_alias` calls in the global scope,
     // then (1) create aliases from the *parsed* files if no class definition was found,
     // and (2) emit issues in the global scope if the source or target class is invalid.
