@@ -3,6 +3,12 @@ Phan NEWS
 ?? ??? 2017, Phan 0.10.0 (dev)
 -----------------------
 
+New Features (Analysis)
++ Add option `ignore_undeclared_functions_with_known_signatures` which can be set to `false`
+  to always warn about global functions Phan has signatures for
+  but are unavailable in the current PHP process (and enabled extensions, and the project being analyzed) (#1080)
+  The default was/is to not warn, to reduce false positives.
+
 Maintenance
 + Increased minimum `ext-ast` version constraint to 0.1.5, switched to AST version 50.
 + Update links to project from github.com/etsy/phan to github.com/phan/phan.
